--- a/style/style.css
+++ b/style/style.css
@@ -14,58 +14,68 @@ body{
     height: 100%;
     background: linear-gradient(to right,#34e89e, #0f3443 );
 
-    display: grid;
+    display: flex;
     justify-content: center;
     align-content: center;
+    margin-top: 10%;
     
 }
 
 form{
     
     width:350px;
-    height: 400px;
+    height: 350px;
     border-radius: 15px;
     background: white;
     display: grid;
     align-content: center;
     justify-content: center;
+    color: red;
     
     
 }
+.user_img, label{
+    text-align: center;
+    color: #000;
+}
 
-form img{
-    
-    width:120px;
-    height: 120px;
+.user_img img{
+    margin-top: -140px;
+    background-color: white;
+    width:140px;
+    height: 140px;
     margin-bottom: 30px;
-    
+    border-radius: 100px;
+    padding: 3px;
+    border: 2px solid white;
+    box-shadow: 0 0 10px #34e89e;    
 }
 
 .btn{ 
     width: 300px;
     height: 35px;
+    border: none;
     border-radius: 10px;
     border: 2px solid #34e89e;
     margin: 10px;
     text-align: center;
-
+    color: #0f3443;
 }
 
-.btn-2{
+.btn_2{
     width: 300px;
     height: 35px;
     border-radius: 10px;
     color: white;
     transition-duration: 0.4s;
     background-color: #0f3443;
-
     margin: 10px;
 }
 
-.btn:hover{
-    border: 2px solid linear-gradient(to right,#34e89e, #0f3443);
+.btn:active{
+    border: 2px solid #0f3443;
 }
 
-.btn-2:hover{
-    background-color: linear-gradient(to right,#34e89e, #0f3443);
+.btn_2:hover{
+    background-color: #34e89e ;
 }
